Fix production mobile styles

--- a/src/Message/styles.module.css
+++ b/src/Message/styles.module.css
@@ -5,6 +5,7 @@
     max-height: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .avatar {
@@ -67,6 +68,8 @@
     display: flex;
     flex-direction: row;
     margin-bottom:5px;
+    position: sticky;
+    bottom: 0;
 }
 
 .footer textarea {
