--- a/src/app.css
+++ b/src/app.css
@@ -38,3 +38,8 @@
 .ReactModal__Overlay--before-close{
     opacity: 0;
 }
+
+.ReactModal__Body--open,
+.ReactModal__Html--open {
+    overflow: hidden;
+}
